--- a/index.html
+++ b/index.html
@@ -1,42 +1,12 @@
-
-Skip to content
-Pull requests
-Issues
-Marketplace
-Explore
-@g506
-Learn Git and GitHub without any code!
-
-Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
-g506 /
-g506.github.io
-
-1
-0
-
-    0
-
-Code
-Issues 0
-Pull requests 0
-Actions
-Projects 0
-Wiki
-Security
-Insights
-Settings
-g506.github.io/index.html
-@g506 g506 Update index.html bd4c73d 12 minutes ago
-40 lines (36 sloc) 1.13 KB
 <HTML>
 
 <HEAD>
     <title>
-        VCPS 6th A
+        VCPS 
     </title>
 
 <body>
-    <center>Class 6th </center>
+    <center>Class 8th </center>
     <div class="english">
         <h4>English </h4>
         <a href="">Download English
