--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <center>Class 8th </center>
     <div class="english">
         <h4>English </h4>
-        <a href="">Download English
-            Book</a><br><br>
+        <button><a href="">Download Book</a></button>
+        <button><a href="">Download Excercise</a></button>
     </div>
 </body>
 </HEAD>
